[tool.poetry]
name = "nonebot-plugin-mhylivecode"
version = "0.1.0"
description = "查询米游社(原神/崩铁)前瞻直播兑换码"
authors = ["joseandluue"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nb-cli = "^1.4.1"
nonebot-plugin-send-anything-anywhere = "^0.6.1"
nonebot-plugin-apscheduler = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
